--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="#">Electronics</a></li>
                             <li><a class="dropdown-item" href="#">Clothing</a></li>
-                            <li><a class="dropdown-item" href="#">Home & Living</a></li>
+                            <li><a class="dropdown-item" href="#">Home or Living</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
